Fixes and update
* prepare for multiple php version
* redis service
* php-fpm socket WIP

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
   php:
     build:
       context: .
-      dockerfile: docker/php/Dockerfile
-    image: infinitum/laravel-docker
-    container_name: laravel-docker-php
+      dockerfile: docker/php/7.3/Dockerfile
+    image: infinitum/php
+    container_name: infinitum-php
     restart: unless-stopped
     tty: true
     environment:
@@ -15,14 +15,16 @@ services:
     working_dir: /var/www
     volumes:
       - ./app/:/var/www
-      - ./docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
+      - ./docker/php/7.3/local.ini:/usr/local/etc/php/conf.d/local.ini
+#      - ./docker/php/7.3/zz-docker.conf:/usr/local/etc/php-fpm.d/zz-docker.conf
+      - infinitum-volumes-phpsocket:/run/php
     networks:
-      - laravel-docker-network
+      - infinitum-network
 
   # Nginx Service
   webserver:
     image: nginx:alpine
-    container_name: laravel-docker-nginx
+    container_name: infinitum-nginx
     restart: unless-stopped
     tty: true
     ports:
@@ -31,32 +33,47 @@ services:
     volumes:
       - ./app/:/var/www
       - ./docker/nginx/conf.d/:/etc/nginx/conf.d/
+      - infinitum-volumes-phpsocket:/run/php
     networks:
-      - laravel-docker-network
+      - infinitum-network
+
+  # Redis store
+  redis:
+    image: redis:alpine
+    container_name: infinitum-redis
+    restart: unless-stopped
+    tty: true
+    ports:
+      - "63790:6379"
+    volumes:
+      - infinitum-volumes-redis:/data/
+#      - ./docker/redis/redis.conf:/usr/local/etc/redis/redis.conf
+    networks:
+      - infinitum-network
 
   # MySQL Service
   mysql:
     image: mysql:5.7
-    container_name: laravel-docker-mysql
+    container_name: infinitum-mysql
     restart: unless-stopped
     tty: true
     ports:
       - "33060:3306"
     environment:
-      MYSQL_DATABASE: laravel
+      MYSQL_DATABASE: infinitum
       MYSQL_ROOT_PASSWORD: secret
       SERVICE_TAGS: dev
       SERVICE_NAME: mysql
     volumes:
-      - laravel-docker-volumes-mysql:/var/lib/mysql/
+      - infinitum-volumes-mysql:/var/lib/mysql/
       - ./docker/mysql/my.cnf:/etc/mysql/my.cnf
     networks:
-      - laravel-docker-network
+      - infinitum-network
 
-  # MySQL Service
+  # PostgreSQL Service
   postgresql:
     image: postgres:11
-    container_name: laravel-docker-postgresql
+    container_name: infinitum-postgresql
     restart: unless-stopped
     tty: true
     ports:
@@ -64,23 +81,27 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: secret
-      DB_USER: laravel
+      DB_USER: infinitum
       DB_PASSWORD: secret
-      DB_NAME: laravel , test2
+      DB_NAME: infinitum , test2
     volumes:
-      - laravel-docker-volumes-postgresql:/var/lib/postgresql/data/
+      - infinitum-volumes-postgresql:/var/lib/postgresql/data/
       - ./docker/postgresql/initdb.d/:/docker-entrypoint-initdb.d/
     networks:
-      - laravel-docker-network
+      - infinitum-network
 
 #Docker Networks
 networks:
-  laravel-docker-network:
+  infinitum-network:
     driver: bridge
 
 #Volumes
 volumes:
-  laravel-docker-volumes-mysql:
+  infinitum-volumes-mysql:
     driver: local
-  laravel-docker-volumes-postgresql:
+  infinitum-volumes-postgresql:
+    driver: local
+  infinitum-volumes-redis:
+    driver: local
+  infinitum-volumes-phpsocket:
     driver: local
