--- a/docker/stubs/nginx/server-block.conf
+++ b/docker/stubs/nginx/server-block.conf
@@ -1,15 +1,14 @@
 server {
     listen 80;
-    server_name laravel.docker;
-
-    root /var/www/laravel/public;
+    server_name your-app-domain.docker
+    root /var/www/path/to/web/root;
     charset utf-8;
     client_max_body_size 128M;
     index index.php index.html;
 
     # access_log /var/log/nginx/laravel-access.log;
     access_log off;
-    error_log  /var/log/nginx/laravel-error.log;
+    error_log  /var/log/nginx/error.log;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
@@ -19,7 +18,7 @@ server {
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass infinitum-php-7.0:9000;
+        fastcgi_pass infinitum-php:9000;
         # fastcgi_pass _php73;
         fastcgi_index index.php;
         include fastcgi_params;
